include/yetty/ygui/ygui.h

struct yetty_ygui_widget;
/*=============================================================================
 * Layout (flexbox-style)
 *===========================================================================*/

typedef enum {
    YETTY_YGUI_LAYOUT_MANUAL = 0, /* default: children at authored x/y/w/h */
    YETTY_YGUI_LAYOUT_FLEX        /* row/column flex container */
} ygui_layout_mode_t;
typedef enum {
    YETTY_YGUI_FLEX_ROW = 0,
    YETTY_YGUI_FLEX_COLUMN
} ygui_flex_direction_t;
typedef enum {
    YETTY_YGUI_JUSTIFY_START = 0,
    YETTY_YGUI_JUSTIFY_CENTER,
    YETTY_YGUI_JUSTIFY_END,
    YETTY_YGUI_JUSTIFY_SPACE_BETWEEN,
    YETTY_YGUI_JUSTIFY_SPACE_AROUND,
    YETTY_YGUI_JUSTIFY_SPACE_EVENLY
} ygui_justify_t;
typedef enum {
    /* AUTO is the calloc-zero default. As align_items it behaves like START.
     * As align_self it means "inherit parent's align_items". */
    YETTY_YGUI_ALIGN_AUTO = 0,
    YETTY_YGUI_ALIGN_START,
    YETTY_YGUI_ALIGN_CENTER,
    YETTY_YGUI_ALIGN_END,
    YETTY_YGUI_ALIGN_STRETCH,
    YETTY_YGUI_ALIGN_BASELINE   /* cross-axis: line up children by text baseline */
} ygui_align_t;
typedef enum {
    YETTY_YGUI_FLEX_NOWRAP = 0,
    YETTY_YGUI_FLEX_WRAP        /* break to new line when children overflow */
} ygui_flex_wrap_t;
typedef enum {
    YETTY_YGUI_POSITION_RELATIVE = 0, /* default — participates in flex flow */
    YETTY_YGUI_POSITION_ABSOLUTE      /* skipped by flex; positioned at authored x/y */
} ygui_position_t;
/* Widget-specific callbacks */
typedef void (*ygui_click_callback_t)(struct yetty_ygui_widget *widget, void *userdata);
void yetty_ygui_widget_set_enabled(struct yetty_ygui_widget *widget, int enabled);
int yetty_ygui_widget_is_enabled(const struct yetty_ygui_widget *widget);
uint32_t yetty_ygui_widget_get_flags(const struct yetty_ygui_widget *widget);
/* Styling */
void yetty_ygui_widget_set_bg_color(struct yetty_ygui_widget *widget, uint32_t color);
void yetty_ygui_widget_set_fg_color(struct yetty_ygui_widget *widget, uint32_t color);
void yetty_ygui_widget_set_accent_color(struct yetty_ygui_widget *widget, uint32_t color);
/* Layout (flexbox) — see ygui_layout_mode_t et al. */
void yetty_ygui_widget_set_layout_mode(struct yetty_ygui_widget *widget, ygui_layout_mode_t mode);
void yetty_ygui_widget_set_flex_direction(struct yetty_ygui_widget *widget,
                                          ygui_flex_direction_t direction);
void yetty_ygui_widget_set_justify_content(struct yetty_ygui_widget *widget,
                                           ygui_justify_t justify);
void yetty_ygui_widget_set_align_items(struct yetty_ygui_widget *widget, ygui_align_t align);
void yetty_ygui_widget_set_align_self(struct yetty_ygui_widget *widget, ygui_align_t align);
void yetty_ygui_widget_set_flex(struct yetty_ygui_widget *widget, float grow, float shrink,
                                float basis);
void yetty_ygui_widget_set_gap(struct yetty_ygui_widget *widget, float gap);
void yetty_ygui_widget_set_padding(struct yetty_ygui_widget *widget, float top, float right,
                                   float bottom, float left);
void yetty_ygui_widget_set_margin(struct yetty_ygui_widget *widget, float top, float right,
                                  float bottom, float left);
void yetty_ygui_widget_set_min_size(struct yetty_ygui_widget *widget, float min_w, float min_h);
void yetty_ygui_widget_set_max_size(struct yetty_ygui_widget *widget, float max_w, float max_h);
void yetty_ygui_widget_set_flex_wrap(struct yetty_ygui_widget *widget, ygui_flex_wrap_t wrap);
void yetty_ygui_widget_set_align_content(struct yetty_ygui_widget *widget, ygui_align_t align);
void yetty_ygui_widget_set_position_mode(struct yetty_ygui_widget *widget, ygui_position_t position);
void yetty_ygui_widget_set_flex_basis_percent(struct yetty_ygui_widget *widget, float pct);
void yetty_ygui_widget_set_size_percent(struct yetty_ygui_widget *widget, float w_pct, float h_pct);
void yetty_ygui_widget_set_min_size_percent(struct yetty_ygui_widget *widget,
                                            float min_w_pct, float min_h_pct);
void yetty_ygui_widget_set_max_size_percent(struct yetty_ygui_widget *widget,
                                            float max_w_pct, float max_h_pct);
/* Apply a CSS-like one-shot string to a widget's layout. Recognized
 * properties (each terminated by ';' or end-of-string):
 *
 *   display:        flex | manual
 *   flex-direction: row | column
 *   flex-wrap:      nowrap | wrap
 *   justify-content: start | center | end | space-between | space-around | space-evenly
 *   align-items:    auto | start | center | end | stretch | baseline
 *   align-self:     auto | start | center | end | stretch | baseline
 *   align-content:  auto | start | center | end | stretch | space-between | space-around | space-evenly
 *   position:       relative | absolute
 *   flex:           <grow> [<shrink> [<basis>]]
 *   flex-grow:      <number>
 *   flex-shrink:    <number>
 *   flex-basis:     <number>[px|%] | auto
 *   gap:            <number>[px]
 *   padding:        <t> [<r> [<b> [<l>]]]   (each <number>[px])
 *   margin:         same shorthand as padding
 *   width:          <number>%
 *   height:         <number>%
 *   min-width / min-height / max-width / max-height: <number>[px|%]
 *
 * Returns ok or an error result. Unknown properties are reported but do
 * not abort parsing of the rest of the string. */
struct yetty_ycore_void_result yetty_ygui_widget_apply_css(struct yetty_ygui_widget *widget,
                                                            const char *css);
/*=============================================================================
 * Widget-Specific Properties
 *===========================================================================*/

/* Button */
void yetty_ygui_widget_button_set_label(struct yetty_ygui_widget *widget, const char *label);
const char *yetty_ygui_widget_button_get_label(const struct yetty_ygui_widget *widget);
/* Label */
void yetty_ygui_widget_label_set_text(struct yetty_ygui_widget *widget, const char *text);
const char *yetty_ygui_widget_label_get_text(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_label_set_font_size(struct yetty_ygui_widget *widget, float size);
/* Slider */
void yetty_ygui_widget_slider_set_value(struct yetty_ygui_widget *widget, float value);
float yetty_ygui_widget_slider_get_value(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_slider_set_range(struct yetty_ygui_widget *widget, float min_val, float max_val);
/* Checkbox */
void yetty_ygui_widget_checkbox_set_checked(struct yetty_ygui_widget *widget, int checked);
int yetty_ygui_widget_checkbox_get_checked(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_checkbox_set_label(struct yetty_ygui_widget *widget, const char *label);
/* TextInput */
void yetty_ygui_widget_textinput_set_text(struct yetty_ygui_widget *widget, const char *text);
const char *yetty_ygui_widget_textinput_get_text(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_textinput_set_placeholder(struct yetty_ygui_widget *widget, const char *text);
/* Panel */
void yetty_ygui_widget_panel_set_scroll(struct yetty_ygui_widget *widget, float x, float y);
void yetty_ygui_widget_panel_get_scroll(const struct yetty_ygui_widget *widget, float *x, float *y);
void yetty_ygui_widget_panel_set_content_size(struct yetty_ygui_widget *widget, float w, float h);
void yetty_ygui_widget_panel_set_header_height(struct yetty_ygui_widget *widget, float h);
/* Progress */
void yetty_ygui_widget_progress_set_value(struct yetty_ygui_widget *widget, float value);
float yetty_ygui_widget_progress_get_value(const struct yetty_ygui_widget *widget);
/* Dropdown */
void yetty_ygui_widget_dropdown_set_options(struct yetty_ygui_widget *widget, const char **options, int count);
void yetty_ygui_widget_dropdown_set_selected(struct yetty_ygui_widget *widget, int index);
int yetty_ygui_widget_dropdown_get_selected(const struct yetty_ygui_widget *widget);
/* ColorPicker */
void yetty_ygui_widget_colorpicker_set_color(struct yetty_ygui_widget *widget, float r, float g, float b, float a);
void yetty_ygui_widget_colorpicker_get_color(const struct yetty_ygui_widget *widget, float *r, float *g, float *b,
                                float *a);
/* Popup */
void yetty_ygui_widget_popup_set_label(struct yetty_ygui_widget *widget, const char *label);
const char *yetty_ygui_widget_popup_get_label(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_popup_set_modal(struct yetty_ygui_widget *widget, int modal);
int yetty_ygui_widget_popup_is_modal(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_popup_set_open(struct yetty_ygui_widget *widget, int open);
int yetty_ygui_widget_popup_is_open(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_popup_set_scene_size(struct yetty_ygui_widget *widget, float w, float h);
void yetty_ygui_widget_popup_set_header_color(struct yetty_ygui_widget *widget, uint32_t color);
/* CollapsingHeader */
void yetty_ygui_widget_collapsing_header_set_label(struct yetty_ygui_widget *widget, const char *label);
const char *yetty_ygui_widget_collapsing_header_get_label(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_collapsing_header_set_open(struct yetty_ygui_widget *widget, int open);
int yetty_ygui_widget_collapsing_header_is_open(const struct yetty_ygui_widget *widget);
/* Tooltip */
void yetty_ygui_widget_tooltip_set_label(struct yetty_ygui_widget *widget, const char *label);
const char *yetty_ygui_widget_tooltip_get_label(const struct yetty_ygui_widget *widget);
/* Selectable */
void yetty_ygui_widget_selectable_set_label(struct yetty_ygui_widget *widget, const char *label);
const char *yetty_ygui_widget_selectable_get_label(const struct yetty_ygui_widget *widget);
void yetty_ygui_widget_selectable_set_checked(struct yetty_ygui_widget *widget, int checked);
int yetty_ygui_widget_selectable_is_checked(const struct yetty_ygui_widget *widget);
/* ChoiceBox */
void yetty_ygui_widget_choicebox_set_options(struct yetty_ygui_widget *widget, const char **options, int count);
void yetty_ygui_widget_choicebox_set_selected(struct yetty_ygui_widget *widget, int index);
int yetty_ygui_widget_choicebox_get_selected(const struct yetty_ygui_widget *widget);
/* Scrollbars (V/H share the same value 0..1) */
void yetty_ygui_widget_scrollbar_set_value(struct yetty_ygui_widget *widget, float value);
float yetty_ygui_widget_scrollbar_get_value(const struct yetty_ygui_widget *widget);
/* List */
void yetty_ygui_widget_list_set_selected(struct yetty_ygui_widget *list,
                                          struct yetty_ygui_widget *child);
struct yetty_ygui_widget *
yetty_ygui_widget_list_get_selected(const struct yetty_ygui_widget *list);
void yetty_ygui_widget_list_on_select(struct yetty_ygui_widget *list,
                                       ygui_click_callback_t cb, void *userdata);