bindings/python/ygui.py

    _lib.yetty_ygui_widget_set_enabled.restype = None
    _lib.yetty_ygui_widget_is_enabled.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_is_enabled.restype = c_int
    _lib.yetty_ygui_widget_get_flags.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_get_flags.restype = c_uint
    _lib.yetty_ygui_widget_set_bg_color.argtypes = [POINTER(yetty_ygui_widget), c_uint]
    _lib.yetty_ygui_widget_set_bg_color.restype = None
    _lib.yetty_ygui_widget_set_fg_color.argtypes = [POINTER(yetty_ygui_widget), c_uint]
    _lib.yetty_ygui_widget_set_fg_color.restype = None
    _lib.yetty_ygui_widget_set_accent_color.argtypes = [POINTER(yetty_ygui_widget), c_uint]
    _lib.yetty_ygui_widget_set_accent_color.restype = None
    _lib.yetty_ygui_widget_set_layout_mode.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_layout_mode.restype = None
    _lib.yetty_ygui_widget_set_flex_direction.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_flex_direction.restype = None
    _lib.yetty_ygui_widget_set_justify_content.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_justify_content.restype = None
    _lib.yetty_ygui_widget_set_align_items.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_align_items.restype = None
    _lib.yetty_ygui_widget_set_align_self.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_align_self.restype = None
    _lib.yetty_ygui_widget_set_flex.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float, c_float]
    _lib.yetty_ygui_widget_set_flex.restype = None
    _lib.yetty_ygui_widget_set_gap.argtypes = [POINTER(yetty_ygui_widget), c_float]
    _lib.yetty_ygui_widget_set_gap.restype = None
    _lib.yetty_ygui_widget_set_padding.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_widget_set_padding.restype = None
    _lib.yetty_ygui_widget_set_margin.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_widget_set_margin.restype = None
    _lib.yetty_ygui_widget_set_min_size.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_set_min_size.restype = None
    _lib.yetty_ygui_widget_set_max_size.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_set_max_size.restype = None
    _lib.yetty_ygui_widget_set_flex_wrap.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_flex_wrap.restype = None
    _lib.yetty_ygui_widget_set_align_content.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_align_content.restype = None
    _lib.yetty_ygui_widget_set_position_mode.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_set_position_mode.restype = None
    _lib.yetty_ygui_widget_set_flex_basis_percent.argtypes = [POINTER(yetty_ygui_widget), c_float]
    _lib.yetty_ygui_widget_set_flex_basis_percent.restype = None
    _lib.yetty_ygui_widget_set_size_percent.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_set_size_percent.restype = None
    _lib.yetty_ygui_widget_set_min_size_percent.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_set_min_size_percent.restype = None
    _lib.yetty_ygui_widget_set_max_size_percent.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_set_max_size_percent.restype = None
    _lib.yetty_ygui_widget_apply_css.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_apply_css.restype = yetty_ycore_void_result
    _lib.yetty_ygui_widget_button_set_label.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_button_set_label.restype = None
    _lib.yetty_ygui_widget_button_get_label.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_button_get_label.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_label_set_text.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_label_set_text.restype = None
    _lib.yetty_ygui_widget_label_get_text.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_label_get_text.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_label_set_font_size.argtypes = [POINTER(yetty_ygui_widget), c_float]
    _lib.yetty_ygui_widget_label_set_font_size.restype = None
    _lib.yetty_ygui_widget_slider_set_value.argtypes = [POINTER(yetty_ygui_widget), c_float]
    _lib.yetty_ygui_widget_slider_set_value.restype = None
    _lib.yetty_ygui_widget_slider_get_value.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_slider_get_value.restype = c_float
    _lib.yetty_ygui_widget_slider_set_range.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_slider_set_range.restype = None
    _lib.yetty_ygui_widget_checkbox_set_checked.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_checkbox_set_checked.restype = None
    _lib.yetty_ygui_widget_checkbox_get_checked.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_checkbox_get_checked.restype = c_int
    _lib.yetty_ygui_widget_checkbox_set_label.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_checkbox_set_label.restype = None
    _lib.yetty_ygui_widget_textinput_set_text.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_textinput_set_text.restype = None
    _lib.yetty_ygui_widget_textinput_get_text.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_textinput_get_text.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_textinput_set_placeholder.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_textinput_set_placeholder.restype = None
    _lib.yetty_ygui_widget_panel_set_scroll.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_panel_set_scroll.restype = None
    _lib.yetty_ygui_widget_panel_get_scroll.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_float), POINTER(c_float)]
    _lib.yetty_ygui_widget_panel_get_scroll.restype = None
    _lib.yetty_ygui_widget_panel_set_content_size.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_panel_set_content_size.restype = None
    _lib.yetty_ygui_widget_panel_set_header_height.argtypes = [POINTER(yetty_ygui_widget), c_float]
    _lib.yetty_ygui_widget_panel_set_header_height.restype = None
    _lib.yetty_ygui_widget_progress_set_value.argtypes = [POINTER(yetty_ygui_widget), c_float]
    _lib.yetty_ygui_widget_progress_set_value.restype = None
    _lib.yetty_ygui_widget_progress_get_value.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_progress_get_value.restype = c_float
    _lib.yetty_ygui_widget_dropdown_set_options.argtypes = [POINTER(yetty_ygui_widget), POINTER(POINTER(c_char)), c_int]
    _lib.yetty_ygui_widget_dropdown_set_options.restype = None
    _lib.yetty_ygui_widget_dropdown_set_selected.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_dropdown_set_selected.restype = None
    _lib.yetty_ygui_widget_dropdown_get_selected.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_dropdown_get_selected.restype = c_int
    _lib.yetty_ygui_widget_colorpicker_set_color.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_widget_colorpicker_set_color.restype = None
    _lib.yetty_ygui_widget_colorpicker_get_color.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float)]
    _lib.yetty_ygui_widget_colorpicker_get_color.restype = None
    _lib.yetty_ygui_widget_popup_set_label.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_popup_set_label.restype = None
    _lib.yetty_ygui_widget_popup_get_label.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_popup_get_label.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_popup_set_modal.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_popup_set_modal.restype = None
    _lib.yetty_ygui_widget_popup_is_modal.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_popup_is_modal.restype = c_int
    _lib.yetty_ygui_widget_popup_set_open.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_popup_set_open.restype = None
    _lib.yetty_ygui_widget_popup_is_open.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_popup_is_open.restype = c_int
    _lib.yetty_ygui_widget_popup_set_scene_size.argtypes = [POINTER(yetty_ygui_widget), c_float, c_float]
    _lib.yetty_ygui_widget_popup_set_scene_size.restype = None
    _lib.yetty_ygui_widget_popup_set_header_color.argtypes = [POINTER(yetty_ygui_widget), c_uint]
    _lib.yetty_ygui_widget_popup_set_header_color.restype = None
    _lib.yetty_ygui_widget_collapsing_header_set_label.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_collapsing_header_set_label.restype = None
    _lib.yetty_ygui_widget_collapsing_header_get_label.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_collapsing_header_get_label.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_collapsing_header_set_open.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_collapsing_header_set_open.restype = None
    _lib.yetty_ygui_widget_collapsing_header_is_open.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_collapsing_header_is_open.restype = c_int
    _lib.yetty_ygui_widget_tooltip_set_label.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_tooltip_set_label.restype = None
    _lib.yetty_ygui_widget_tooltip_get_label.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_tooltip_get_label.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_selectable_set_label.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_selectable_set_label.restype = None
    _lib.yetty_ygui_widget_selectable_get_label.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_selectable_get_label.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_selectable_set_checked.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_selectable_set_checked.restype = None
    _lib.yetty_ygui_widget_selectable_is_checked.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_selectable_is_checked.restype = c_int
    _lib.yetty_ygui_widget_choicebox_set_options.argtypes = [POINTER(yetty_ygui_widget), POINTER(POINTER(c_char)), c_int]
    _lib.yetty_ygui_widget_choicebox_set_options.restype = None
    _lib.yetty_ygui_widget_choicebox_set_selected.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_choicebox_set_selected.restype = None
    _lib.yetty_ygui_widget_choicebox_get_selected.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_choicebox_get_selected.restype = c_int
    _lib.yetty_ygui_widget_scrollbar_set_value.argtypes = [POINTER(yetty_ygui_widget), c_float]
    _lib.yetty_ygui_widget_scrollbar_set_value.restype = None
    _lib.yetty_ygui_widget_scrollbar_get_value.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_scrollbar_get_value.restype = c_float
    _lib.yetty_ygui_widget_list_set_selected.argtypes = [POINTER(yetty_ygui_widget), POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_list_set_selected.restype = None
    _lib.yetty_ygui_widget_list_get_selected.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_list_get_selected.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_widget_list_on_select.argtypes = [POINTER(yetty_ygui_widget), POINTER(CFUNCTYPE(None, POINTER(yetty_ygui_widget), c_void_p)), c_void_p]
